@@ -1,3 +1,6 @@
+2000-12-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* Configuration.cc: don't abort when exult.cfg not found
+
 2000-12-05  Max Horn  <max@quendi.de>
 	* ucmachine.h: fixed delete -> delete []
 
